[gd_scene load_steps=3 format=3 uid="uid://dg82vswbfskf0"]

[ext_resource type="Script" path="res://Scenes/Player/PlayerScript.gd" id="1_eqeby"]
[ext_resource type="PackedScene" uid="uid://gxorj8d0estk" path="res://Scenes/Chip/chips_info.tscn" id="2_0wy6i"]

[node name="Player" type="VBoxContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -63.0
offset_right = 40.0
grow_vertical = 0
alignment = 1
script = ExtResource("1_eqeby")

[node name="ChipSpace" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PlayerSpace" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ChipsInfo" parent="PlayerSpace" instance=ExtResource("2_0wy6i")]
layout_mode = 2

[node name="Cards" type="HBoxContainer" parent="PlayerSpace"]
layout_mode = 2
